<resources>
    <string name="app_name">HomeWork522</string>
    <string name="text_username">Введите логин</string>
    <string name="field_usrename" />
    <string name="text_email">Введите пароль</string>
    <string name="field_email" />
    <string name="ok_button">LOGIN</string>
    <string name="clear_button">REGISTRATION</string>
    <string name="hintName">Логин</string>
    <string name="emailHint">Пароль</string>
    <string name="messageErrorLogin">Вы не вошли в систему\nВведен неправильный логин или пароль\nИли вы не ввели логин или пароль</string>
    <string name="messageErrorToastRegistr">Вы не зарегистрировались!</string>
    <string name="messageErrorRegistr">Вы не зарегистрированы\nНе ввели логин или пароль\nПопробуйте еще раз.</string>
    <string name="messageOkToastLogin">Вы вошли в систему</string>
    <string name="messageOkLogin">Поздравляю вы ввели правильный Логин и Пароль</string>
    <string name="messageErrorLoginEmpty">Вы не ввели логин или пароль\nПопробуйте еще раз</string>
    <string name="messageOkRegistration">Вы зарегистрированы</string>
    <string name="messageErrorToastLoginEmpty">Вы не ввели логин или пароль</string>
    <string name="messageErrorToastLogin">Вы не вошли в систему</string>
    <string name="checkBoxText">Сохранить Логин и Пароль на внешнем носителе</string>
    <string name="checkBoxTextSave">Состояние CheckBox сохранено</string>

</resources>
